--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
 
     {% include '/components/footer.html' %}  <!-- Footer global -->
     
+    <script src="/static/js/navbar.js"></script>
 </body>
 
 </html>
